<resources>
    <string name="app_name">西虹柿</string>
    <!--LoginActivity-->
    <string name="LoginActivity_username_hint">手机号/用户名</string>
    <string name="LoginActivity_password_hint">密码</string>
    <string name="LoginActivity_login">登录</string>
    <string name="LoginActivity_fogetpassword">忘记密码？</string>
    <string name="LoginActivity_register">新用户注册</string>
    <!--RegisterActivity-->
    <string name="RegisterActivity_register">注册</string>
    <string name="RegisterActivity_confirmpassword">确认密码</string>
    <!-- FriendsListActivity 好友分组-->
    <string-array name="friendsGroup">
        <item>我的好友</item>
        <item>我的同学</item>
        <item>我的同事</item>
        <item>我的亲人</item>
    </string-array>
</resources>
