<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/default_icon"
            android:layout_width="@dimen/LoginActivity_image_height"
            android:layout_height="@dimen/LoginActivity_image_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_icon" />

        <TextView
            android:layout_width="@dimen/LoginActivity_triangle_width"
            android:layout_height="@dimen/LoginActivity_triangle_height"
            android:layout_below="@+id/default_icon"
            android:layout_centerHorizontal="true"
            android:background="@drawable/loginactivity_triangle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/loginactivity_frame"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="49"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_spacing_layout_marginTop" />

            <EditText
                android:id="@+id/login_userid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_control_layout_height"
                android:background="@drawable/loginactivity_editshape"
                android:hint="@string/LoginActivity_username_hint"
                android:textColor="@color/LoginActivity_text_color"
                android:textSize="@dimen/LoginActivity_hint_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_spacing_layout_marginTop" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_control_layout_height"
                android:background="@drawable/loginactivity_editshape"
                android:hint="@string/LoginActivity_password_hint"
                android:textColor="@color/LoginActivity_text_color"
                android:inputType="textPassword"
                android:textSize="@dimen/LoginActivity_hint_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_spacing_layout_marginTop" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_control_layout_height"
                android:background="@drawable/loginactivity_btn"
                android:text="@string/LoginActivity_login"
                android:textColor="@color/LoginActivity_btnText_color"
                android:textSize="@dimen/LoginActivity_logintext_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_control_layout_height"
                android:layout_marginTop="@dimen/LoginActivity_spacing_layout_marginTop"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9">

                    <TextView
                        android:id="@+id/foget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:gravity="center"
                        android:text="@string/LoginActivity_fogetpassword"
                        android:textColor="@color/LoginActivity_text_color"
                        android:textSize="@dimen/LoginActivity_forgetOrRegistertext_size" />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/LoginActivity_register"
                        android:textColor="@color/LoginActivity_text_color"
                        android:textSize="@dimen/LoginActivity_forgetOrRegistertext_size" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/LoginActivity_spacing_layout_marginTop" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />
    </LinearLayout>
</LinearLayout>